--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <style>
+    /* الصق هنا كود CSS اللي فوق */
+  </style>
+
   <title>مرتق | تطبيق تتبع الصلاة</title>
 </head>
 <body>
