--- a/index.html
+++ b/index.html
@@ -111,6 +111,7 @@
       document.getElementById(pageId).style.display = 'block';
     }
   </script>
+<script src="script.js"></script>
 
 </body>
 </html>
